--- a/chef/package.json
+++ b/chef/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.5",
+    "react-promise-tracker": "^2.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
